# playground

./: Cargo.toml
assets/shaders/: triangle.wgsl
crates/pg_logger/: Cargo.toml
crates/pg_logger/src/: lib.rs
crates/pg_renderer/: Cargo.toml
crates/pg_renderer/examples/: hello_renderer.rs
crates/pg_renderer/src/: lib.rs  renderers.rs  resources.rs
crates/pg_renderer/src/renderers/: triangle.rs
crates/pg_renderer/src/resources/: pipeline_layout.rs  render_pipeline.rs  shader.rs
examples/hello_world/: Cargo.toml
